--- a/cfg/aliases/aliases_controls.cfg
+++ b/cfg/aliases/aliases_controls.cfg
@@ -25,18 +25,18 @@ alias "-fin_spin" "m_yaw 0.022";                                // Sets the mult
 // and we do the same thing for your resolution's aspect ratio
 
 echoln "[aliases_controls.cfg] {2} Registering detailed scoreboard aliases";
-alias "+fin_scorenet" "+showscores; cl_showfps 2; cq_netgraph 1; cl_showmem 3"; // This gives the scoreboard much more
-alias "-fin_scorenet" "-showscores; cl_showfps 0; cq_netgraph 0; cl_showmem 0"; // information, at the cost of vision.
+alias "+fin_scorenet" "+fin_desubtick_showscores; cl_showfps 2; cq_netgraph 1; cl_showmem 3; exec ./cfg/utility/hardcode_fixes/fix_mouse2.cfg";   // This gives the scoreboard much more
+alias "-fin_scorenet" "-fin_desubtick_showscores; cl_showfps 0; cq_netgraph 0; cl_showmem 0; exec ./cfg/utility/hardcode_fixes/unfix_mouse2.cfg"; // information, at the cost of vision.
 
 alias "fin_scorenet"    "fin_scoreneton";                       // Toggle alias for the scorenet
-alias "fin_scoreneton"  "+showscores; cl_showfps 2; cq_netgraph 1; cl_showmem 3; alias fin_scorenet fin_scorenetoff";
-alias "fin_scorenetoff" "-showscores; cl_showfps 0; cq_netgraph 0; cl_showmem 0; alias fin_scorenet fin_scoreneton";
+alias "fin_scoreneton"  "+fin_desubtick_showscores; cl_showfps 2; cq_netgraph 1; cl_showmem 3; alias fin_scorenet fin_scorenetoff; exec ./cfg/utility/hardcode_fixes/fix_mouse2.cfg";
+alias "fin_scorenetoff" "-fin_desubtick_showscores; cl_showfps 0; cq_netgraph 0; cl_showmem 0; alias fin_scorenet fin_scoreneton;  exec ./cfg/utility/hardcode_fixes/unfix_mouse2.cfg";
 // CS2 cl_hud_healthammo_style 0
 // CS2 cl_hud_healthammo_style 1
 
 
 echoln "[aliases_controls.cfg] {3} Registering perfect crouch jump aliases";
-alias "+fin_cjump" "+fin_desubtick_jump; +fin_desubtick_duck;  alias fin_crouched";         // This is a crouch jump bind, tapping the key performs
+alias "+fin_cjump" "+fin_desubtick_jump; +fin_desubtick_duck;  alias fin_crouched";                     // This is a crouch jump bind, tapping the key performs
 alias "-fin_cjump" "-fin_desubtick_jump; fin_desubtick_jumped; alias fin_crouched -fin_desubtick_duck"; // a perfect crouch jump, holding it keeps you crouched.
 
 alias "+fin_crouch" "+fin_desubtick_duck; alias fin_desubtick_jumped";                      // This makes it so when you release space, it won't
@@ -151,6 +151,7 @@ echoln "[aliases_controls.cfg] {12} Registering desubtick aliases";
 alias "+fin_desubtick_attack"                 "exec ./cfg/aliases/desubtick/+attack.cfg";
 alias "+fin_desubtick_attack2"                "exec ./cfg/aliases/desubtick/+attack2.cfg";
 alias "+fin_desubtick_back"                   "exec ./cfg/aliases/desubtick/+back.cfg";
+alias "+fin_desubtick_bugvoice"               "exec ./cfg/aliases/desubtick/+bugvoice.cfg";
 alias "+fin_desubtick_camdistance"            "exec ./cfg/aliases/desubtick/+camdistance.cfg";
 alias "+fin_desubtick_camin"                  "exec ./cfg/aliases/desubtick/+camin.cfg";
 alias "+fin_desubtick_cammousemove"           "exec ./cfg/aliases/desubtick/+cammousemove.cfg";
@@ -181,6 +182,7 @@ alias "+fin_desubtick_zoom"                   "exec ./cfg/aliases/desubtick/+zoo
 alias "+fin_desubtick_cl_show_team_equipment" "exec ./cfg/aliases/desubtick/+cl_show_team_equipment.cfg";
 alias "+fin_desubtick_lookatweapon"           "exec ./cfg/aliases/desubtick/+lookatweapon.cfg";
 alias "+fin_desubtick_quickbuyradial"         "exec ./cfg/aliases/desubtick/+quickbuyradial.cfg";
+alias "+fin_desubtick_quickgearradial"        "exec ./cfg/aliases/desubtick/+quickgearradial.cfg";
 alias "+fin_desubtick_quickgrenaderadial"     "exec ./cfg/aliases/desubtick/+quickgrenaderadial.cfg";
 alias "+fin_desubtick_quickinv"               "exec ./cfg/aliases/desubtick/+quickinv.cfg";
 alias "+fin_desubtick_radialradio"            "exec ./cfg/aliases/desubtick/+radialradio.cfg";
@@ -190,6 +192,7 @@ alias "+fin_desubtick_spray_menu"             "exec ./cfg/aliases/desubtick/+spr
 alias "-fin_desubtick_attack"                 "exec ./cfg/aliases/desubtick/-attack.cfg";
 alias "-fin_desubtick_attack2"                "exec ./cfg/aliases/desubtick/-attack2.cfg";
 alias "-fin_desubtick_back"                   "exec ./cfg/aliases/desubtick/-back.cfg";
+alias "-fin_desubtick_bugvoice"               "exec ./cfg/aliases/desubtick/-bugvoice.cfg";
 alias "-fin_desubtick_camdistance"            "exec ./cfg/aliases/desubtick/-camdistance.cfg";
 alias "-fin_desubtick_camin"                  "exec ./cfg/aliases/desubtick/-camin.cfg";
 alias "-fin_desubtick_cammousemove"           "exec ./cfg/aliases/desubtick/-cammousemove.cfg";
@@ -220,13 +223,13 @@ alias "-fin_desubtick_zoom"                   "exec ./cfg/aliases/desubtick/-zoo
 alias "-fin_desubtick_cl_show_team_equipment" "exec ./cfg/aliases/desubtick/-cl_show_team_equipment.cfg";
 alias "-fin_desubtick_lookatweapon"           "exec ./cfg/aliases/desubtick/-lookatweapon.cfg";
 alias "-fin_desubtick_quickbuyradial"         "exec ./cfg/aliases/desubtick/-quickbuyradial.cfg";
+alias "-fin_desubtick_quickgearradial"        "exec ./cfg/aliases/desubtick/-quickgearradial.cfg";
 alias "-fin_desubtick_quickgrenaderadial"     "exec ./cfg/aliases/desubtick/-quickgrenaderadial.cfg";
 alias "-fin_desubtick_quickinv"               "exec ./cfg/aliases/desubtick/-quickinv.cfg";
 alias "-fin_desubtick_radialradio"            "exec ./cfg/aliases/desubtick/-radialradio.cfg";
 alias "-fin_desubtick_radialradio2"           "exec ./cfg/aliases/desubtick/-radialradio2.cfg";
 alias "-fin_desubtick_radialradio3"           "exec ./cfg/aliases/desubtick/-radialradio3.cfg";
 alias "-fin_desubtick_spray_menu"             "exec ./cfg/aliases/desubtick/-spray_menu.cfg";
-
 
 
 echoln "[aliases_controls.cfg] End of aliases_controls.cfg";
