--- a/cfg/aliases/aliases_init.cfg
+++ b/cfg/aliases/aliases_init.cfg
@@ -2,14 +2,14 @@ echoln "[aliases_init.cfg] Start of aliases_init.cfg";
 
 
 
-echoln "[aliases_init.cfg]  {1} Registering shorthand aliases for common commands";
-// CS2 alias "rc" "fin_nothing";                                 // Clears world decals
-alias "dc" "disconnect";                                        // Disconnect from server
-alias "nc" "noclip";                                            // Toggle. Player becomes non-solid and flies.  Optional argument of 0 or 1 to force enable/disable
-alias "q"  "quit";                                              // Quit the game
-alias "k"  "kill";                                              // Kills the player with generic damage
-alias "bp" "bot_place";                                         // Places a bot from the map at where the local player is pointing.
-
+echoln "[aliases_init.cfg] {1} Registering shorthand aliases for common commands";
+// CS2 alias "rc" "fin_nothing";                                // Clears world decals
+alias "dc"  "disconnect";                                       // Disconnect from server
+alias "nc"  "noclip";                                           // Toggle. Player becomes non-solid and flies.  Optional argument of 0 or 1 to force enable/disable
+alias "q"   "quit";                                             // Quit the game
+alias "k"   "kill";                                             // Kills the player with generic damage
+alias "bp"  "bot_place";                                        // Places a bot from the map at where the local player is pointing.
+alias "dbg" "exec ./cfg/primary/debug.cfg";                     // Dumps extensive debug information to console and saves it to a file if possible
 
 echoln "[aliases_init.cfg] {2} Registering meta utility aliases used by other aliases";
 alias "fin_keycontainer" "fin_everykey; fin_nothing";             // This will be activated upon pressing almost any key
@@ -18,8 +18,8 @@ alias "fin_everykey"     "";                                      // You can set
 alias "fin_onyaw"        "";
 alias "fin_onpitch"      "";
 alias "fin_onmousemove"  "";
-alias "fin_uninspect"    "-lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon";
 // CS2 fin_clanid removed from fin_keycontainer because currently clan tags don't show up in game and it causes console UserInfo spam
+
 
 echoln "[aliases_init.cfg] {3} Registering rebindable pitch/yaw aliases";
 alias "fin_onyaw" "fin_onmousemove";
@@ -87,7 +87,8 @@ alias "fin_clear_radialradio"               "-radialradio;            -radialrad
 alias "fin_clear_radialradio2"              "-radialradio2;           -radialradio2;           -radialradio2;           -radialradio2;           -radialradio2;           -radialradio2;           -radialradio2;           -radialradio2;           -radialradio2;           -radialradio2;           -radialradio2;           -radialradio2;           -radialradio2;           -radialradio2;           -radialradio2;           -radialradio2";
 alias "fin_clear_radialradio3"              "-radialradio3;           -radialradio3;           -radialradio3;           -radialradio3;           -radialradio3;           -radialradio3;           -radialradio3;           -radialradio3;           -radialradio3;           -radialradio3;           -radialradio3;           -radialradio3;           -radialradio3;           -radialradio3;           -radialradio3;           -radialradio3";
 alias "fin_clear_spray_menu"                "-spray_menu;             -spray_menu;             -spray_menu;             -spray_menu;             -spray_menu;             -spray_menu;             -spray_menu;             -spray_menu;             -spray_menu;             -spray_menu;             -spray_menu;             -spray_menu;             -spray_menu;             -spray_menu;             -spray_menu;             -spray_menu";
-
+alias "fin_clear_quickgearradial"           "-quickgearradial;        -quickgearradial;        -quickgearradial;        -quickgearradial;        -quickgearradial;        -quickgearradial;        -quickgearradial;        -quickgearradial;        -quickgearradial;        -quickgearradial;        -quickgearradial;        -quickgearradial;        -quickgearradial;        -quickgearradial;        -quickgearradial;        -quickgearradial";
+alias "fin_clear_bugvoice"                  "-bugvoice;               -bugvoice;               -bugvoice;               -bugvoice;               -bugvoice;               -bugvoice;               -bugvoice;               -bugvoice;               -bugvoice;               -bugvoice;               -bugvoice;               -bugvoice;               -bugvoice;               -bugvoice;               -bugvoice;               -bugvoice";
 
 
 echoln "[aliases_init.cfg] End of aliases_init.cfg";
