--- a/cfg/aliases/aliases_items.cfg
+++ b/cfg/aliases/aliases_items.cfg
@@ -1,6 +1,7 @@
 echoln "[aliases_items.cfg] Start of aliases_items.cfg";
 
 
+
 // CS2 echoln "[aliases_items.cfg] Registering vanilla item spawning aliases";
 // CS2 alias "fin_toggleknives"  "fin_knives";                         // Toggle dropping and receiving knives on and off
 // CS2 alias "fin_knives"        "mp_drop_knife_enable true;  mp_items_prohibited 0; sv_cheats true;  alias fin_toggleknives fin_noknives";    // Turns on dropping and receiving knives
@@ -43,12 +44,10 @@ echoln "[aliases_items.cfg] Start of aliases_items.cfg";
 // CS2 alias "fin_zeus"          "exec ./items/zeus.cfg";
 
 
-
 echoln "[aliases_items.cfg] {1} Registering quick buy aliases";
 alias "fin_rifle"    "buy vest; buy m4a1_silencer; buy defuser; buy vesthelm";
 alias "fin_sniper"   "buy vest; buy awp; buy vesthelm; buy defuser";
 alias "fin_griefing" "buy deagle; buy taser; buy flashbang; buy smokegrenade; buy flashbang; buy vest; buy vesthelm; buy decoy; fin_streamermode_off";
-
 
 
 echoln "[aliases_items.cfg] {2} Registering improved grenade aliases";
@@ -59,71 +58,69 @@ alias "fin_hegrenade" "fin_nadexhon; buy hegrenade;    use weapon_hegrenade";
 alias "fin_decoy"     "fin_nadexhon; buy decoy;        use weapon_decoy";
 
 
-
-
 echoln "[aliases_items.cfg] {3} Registering vanilla knife spawning binds";
-alias "+fin_wpn_bayonet" "mp_drop_knife_enable true; give weapon_knife; subclass_change 500 weapon_knife; drop";
-alias "-fin_wpn_bayonet" "fin_uninspect; slot3";
+alias "+fin_wpn_bayonet"        "mp_drop_knife_enable true; give weapon_knife; subclass_change 500 weapon_knife; drop";
+alias "-fin_wpn_bayonet"        "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_classic" "mp_drop_knife_enable true; give weapon_knife; subclass_change 503 weapon_knife; drop";
-alias "-fin_wpn_classic" "fin_uninspect; slot3";
+alias "+fin_wpn_classic"        "mp_drop_knife_enable true; give weapon_knife; subclass_change 503 weapon_knife; drop";
+alias "-fin_wpn_classic"        "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_flip" "mp_drop_knife_enable true; give weapon_knife; subclass_change 505 weapon_knife; drop";
-alias "-fin_wpn_flip" "fin_uninspect; slot3";
+alias "+fin_wpn_flip"           "mp_drop_knife_enable true; give weapon_knife; subclass_change 505 weapon_knife; drop";
+alias "-fin_wpn_flip"           "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_gut" "mp_drop_knife_enable true; give weapon_knife; subclass_change 506 weapon_knife; drop";
-alias "-fin_wpn_gut" "fin_uninspect; slot3";
+alias "+fin_wpn_gut"            "mp_drop_knife_enable true; give weapon_knife; subclass_change 506 weapon_knife; drop";
+alias "-fin_wpn_gut"            "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_karambit" "mp_drop_knife_enable true; give weapon_knife; subclass_change 507 weapon_knife; drop";
-alias "-fin_wpn_karambit" "fin_uninspect; slot3";
+alias "+fin_wpn_karambit"       "mp_drop_knife_enable true; give weapon_knife; subclass_change 507 weapon_knife; drop";
+alias "-fin_wpn_karambit"       "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_m9" "mp_drop_knife_enable true; give weapon_knife; subclass_change 508 weapon_knife; drop";
-alias "-fin_wpn_m9" "fin_uninspect; slot3";
+alias "+fin_wpn_m9"             "mp_drop_knife_enable true; give weapon_knife; subclass_change 508 weapon_knife; drop";
+alias "-fin_wpn_m9"             "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_huntsman" "mp_drop_knife_enable true; give weapon_knife; subclass_change 509 weapon_knife; drop";
-alias "-fin_wpn_huntsman" "fin_uninspect; slot3";
+alias "+fin_wpn_huntsman"       "mp_drop_knife_enable true; give weapon_knife; subclass_change 509 weapon_knife; drop";
+alias "-fin_wpn_huntsman"       "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_falchion" "mp_drop_knife_enable true; give weapon_knife; subclass_change 512 weapon_knife; drop";
-alias "-fin_wpn_falchion" "fin_uninspect; slot3";
+alias "+fin_wpn_falchion"       "mp_drop_knife_enable true; give weapon_knife; subclass_change 512 weapon_knife; drop";
+alias "-fin_wpn_falchion"       "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_bowie" "mp_drop_knife_enable true; give weapon_knife; subclass_change 514 weapon_knife; drop";
-alias "-fin_wpn_bowie" "fin_uninspect; slot3";
+alias "+fin_wpn_bowie"          "mp_drop_knife_enable true; give weapon_knife; subclass_change 514 weapon_knife; drop";
+alias "-fin_wpn_bowie"          "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_butterfly" "mp_drop_knife_enable true; give weapon_knife; subclass_change 515 weapon_knife; drop";
-alias "-fin_wpn_butterfly" "fin_uninspect; slot3";
+alias "+fin_wpn_butterfly"      "mp_drop_knife_enable true; give weapon_knife; subclass_change 515 weapon_knife; drop";
+alias "-fin_wpn_butterfly"      "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_shadows" "mp_drop_knife_enable true; give weapon_knife; subclass_change 516 weapon_knife; drop";
-alias "-fin_wpn_shadows" "fin_uninspect; slot3";
+alias "+fin_wpn_shadows"        "mp_drop_knife_enable true; give weapon_knife; subclass_change 516 weapon_knife; drop";
+alias "-fin_wpn_shadows"        "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_paracord" "mp_drop_knife_enable true; give weapon_knife; subclass_change 517 weapon_knife; drop";
-alias "-fin_wpn_paracord" "fin_uninspect; slot3";
+alias "+fin_wpn_paracord"       "mp_drop_knife_enable true; give weapon_knife; subclass_change 517 weapon_knife; drop";
+alias "-fin_wpn_paracord"       "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_survival" "mp_drop_knife_enable true; give weapon_knife; subclass_change 518 weapon_knife; drop";
-alias "-fin_wpn_survival" "fin_uninspect; slot3";
+alias "+fin_wpn_survival"       "mp_drop_knife_enable true; give weapon_knife; subclass_change 518 weapon_knife; drop";
+alias "-fin_wpn_survival"       "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_ursus" "mp_drop_knife_enable true; give weapon_knife; subclass_change 519 weapon_knife; drop";
-alias "-fin_wpn_ursus" "fin_uninspect; slot3";
+alias "+fin_wpn_ursus"          "mp_drop_knife_enable true; give weapon_knife; subclass_change 519 weapon_knife; drop";
+alias "-fin_wpn_ursus"          "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_navaja" "mp_drop_knife_enable true; give weapon_knife; subclass_change 520 weapon_knife; drop";
-alias "-fin_wpn_navaja" "fin_uninspect; slot3";
+alias "+fin_wpn_navaja"         "mp_drop_knife_enable true; give weapon_knife; subclass_change 520 weapon_knife; drop";
+alias "-fin_wpn_navaja"         "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_nomad" "mp_drop_knife_enable true; give weapon_knife; subclass_change 521 weapon_knife; drop";
-alias "-fin_wpn_nomad" "fin_uninspect; slot3";
+alias "+fin_wpn_nomad"          "mp_drop_knife_enable true; give weapon_knife; subclass_change 521 weapon_knife; drop";
+alias "-fin_wpn_nomad"          "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_stiletto" "mp_drop_knife_enable true; give weapon_knife; subclass_change 522 weapon_knife; drop";
-alias "-fin_wpn_stiletto" "fin_uninspect; slot3";
+alias "+fin_wpn_stiletto"       "mp_drop_knife_enable true; give weapon_knife; subclass_change 522 weapon_knife; drop";
+alias "-fin_wpn_stiletto"       "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_talon" "mp_drop_knife_enable true; give weapon_knife; subclass_change 523 weapon_knife; drop";
-alias "-fin_wpn_talon" "fin_uninspect; slot3";
+alias "+fin_wpn_talon"          "mp_drop_knife_enable true; give weapon_knife; subclass_change 523 weapon_knife; drop";
+alias "-fin_wpn_talon"          "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_default" "mp_drop_knife_enable true; give weapon_knife; subclass_change 524 weapon_knife; drop";
-alias "-fin_wpn_default" "fin_uninspect; slot3";
+alias "+fin_wpn_default"        "mp_drop_knife_enable true; give weapon_knife; subclass_change 524 weapon_knife; drop";
+alias "-fin_wpn_default"        "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_skeleton" "mp_drop_knife_enable true; give weapon_knife; subclass_change 525 weapon_knife; drop";
-alias "-fin_wpn_skeleton" "fin_uninspect; slot3";
+alias "+fin_wpn_skeleton"       "mp_drop_knife_enable true; give weapon_knife; subclass_change 525 weapon_knife; drop";
+alias "-fin_wpn_skeleton"       "fin_clear_lookatweapon; slot3";
 
-alias "+fin_wpn_kukri" "mp_drop_knife_enable true; give weapon_knife; subclass_change 526 weapon_knife; drop";
-alias "-fin_wpn_kukri" "fin_uninspect; slot3";
+alias "+fin_wpn_kukri"          "mp_drop_knife_enable true; give weapon_knife; subclass_change 526 weapon_knife; drop";
+alias "-fin_wpn_kukri"          "fin_clear_lookatweapon; slot3";
 
 
 
