--- a/cfg/aliases/aliases_misc.cfg
+++ b/cfg/aliases/aliases_misc.cfg
@@ -3,7 +3,7 @@ echoln "[aliases_misc.cfg] Start of aliases_misc.cfg";
 
 
 echoln "[aliases_misc.cfg] {1} Registering Gabe N worshiping alias";
-alias "fin_gaben" "exec ./gaben.cfg";                           // Setup clean Gabe Newell ASCII art printout
+alias "fin_gaben" "exec ./cfg/utility/gaben.cfg";               // Setup clean Gabe Newell ASCII art printout
 
 
 echoln "[aliases_misc.cfg] {2} Registering aliases to increase volume while slow-walking";
