--- a/cfg/aliases/aliases_ui.cfg
+++ b/cfg/aliases/aliases_ui.cfg
@@ -4,7 +4,7 @@ echoln "[aliases_ui.cfg] Start of aliases_ui.cfg";
 
 echoln "[aliases_ui.cfg] {1} Registering automatic knife inspection aliases";
 alias "+fin_autoknifeinspect" "slot3";                          // Pull out weapon when the bound key is pressed
-alias "-fin_autoknifeinspect" "+lookatweapon";                  // Inspect the weapon when the bound key released
+alias "-fin_autoknifeinspect" "+fin_desubtick_lookatweapon";    // Inspect the weapon when the bound key released
 
 
 echoln "[aliases_ui.cfg] {2} Registering keybind list aliases";
@@ -22,7 +22,7 @@ alias "fin_listeverybind" "fin_60percentrow1; fin_60percentrow2; fin_60percentro
 
 
 echoln "[aliases_ui.cfg] {3} Registering grenade crosshair aliases ";
-alias "fin_nadexhon"  "+lookatweapon; multvar cl_crosshairsize -1 100000 1000";    // Usage: multvar varName minValue maxValue factor
+alias "fin_nadexhon"  "+fin_desubtick_lookatweapon; multvar cl_crosshairsize -1 100000 1000";    // Usage: multvar varName minValue maxValue factor
 alias "fin_nadexhoff" "cl_crosshairsize 1.5"                    // Enabling the nade crosshair can be done dynamically but swapping between a pistol and primary for example would mess disabling it up
 
 
@@ -129,8 +129,8 @@ alias "fin_streamermode_off" "cl_sanitize_muted_players 0; cl_sanitize_player_na
 
 echoln "[aliases_ui.cfg] {7} Registering weapon inspection toggle aliases";
 alias "fin_toggleinspect"     "fin_toggleinspect_on";
-alias "fin_toggleinspect_on"  "; +lookatweapon; alias fin_toggleinspect fin_toggleinspect_off";
-alias "fin_toggleinspect_off" "-lookatweapon;  alias fin_toggleinspect fin_toggleinspect_on";
+alias "fin_toggleinspect_on"  "; +fin_desubtick_lookatweapon; alias fin_toggleinspect fin_toggleinspect_off";
+alias "fin_toggleinspect_off" "-fin_desubtick_lookatweapon;   alias fin_toggleinspect fin_toggleinspect_on";
 
 
 
