--- a/cfg/keys/60percentrow6.cfg
+++ b/cfg/keys/60percentrow6.cfg
@@ -9,7 +9,7 @@ bind "ALT";
 bind "SPACE";
 bind "RALT";
 bind "RWIN";
-echoln "[60percentrow6.cfg] No key for menu key";
+bind "APP";
 bind "RCTRL";
 echoln "[60percentrow6.cfg] ";
 
