--- a/cfg/loader.cfg
+++ b/cfg/loader.cfg
@@ -5,10 +5,10 @@ echoln "[loader.cfg] Start of loader.cfg";
 exec "./cfg/utility/clear.cfg";
 
 echoln "[loader.cfg] Loading";                                               // Echo the command arguments on the console
-echoln "[loader.cfg] Fin's CS2 Config 5.0.0-beta4";
+echoln "[loader.cfg] Fin's CS2 Config 5.0.0-beta5";
 echoln "[loader.cfg] https://steamcommunity.com/id/bigfinfrank";
 echoln "[loader.cfg] https://github.com/bigfinfrank/cfg";
-echoln "[loader.cfg] Last edited: October 18th 2023";
+echoln "[loader.cfg] Last edited: October 22nd 2023";
 echoln "[loader.cfg]  ";
 echoln "[loader.cfg]  ";
 echoln "[loader.cfg]  ";
@@ -34,7 +34,7 @@ echoln "[loader.cfg]  ";
 
 
 
-echoln "[loader.cfg] [loader.cfg] {1} Loading scripts";
+echoln "[loader.cfg] {1} Loading scripts";
 exec "./cfg/primary/init.cfg";
 exec "./cfg/aliases/aliases_controls.cfg";
 exec "./cfg/aliases/aliases_exploits.cfg";
@@ -65,7 +65,7 @@ writekeybindings;                                               // Saves current
 // CS2 mat_savechanges;                                          // Saves your video settings to the game's video.txt
 
 
-echoln "[loader.cfg] {4} Game info and Gaben";
+echoln "[loader.cfg] {4} Debug info and Gaben";
 exec "./cfg/primary/debug.cfg";
 
 echoln "[loader.cfg]  ";
@@ -127,10 +127,10 @@ echoln "[loader.cfg]  ";
 echoln "[loader.cfg]  ";
 echoln "[loader.cfg]  ";
 echoln "[loader.cfg] Loaded";
-echoln "[loader.cfg] Fin's CS2 Config 5.0.0-beta4";
+echoln "[loader.cfg] Fin's CS2 Config 5.0.0-beta5";
 echoln "[loader.cfg] https://steamcommunity.com/id/bigfinfrank";
 echoln "[loader.cfg] https://github.com/bigfinfrank/cfg";
-echoln "[loader.cfg] Last edited: October 18th 2023";
+echoln "[loader.cfg] Last edited: October 22nd 2023";
 echoln "[loader.cfg]  ";
 echoln "[loader.cfg]  ";
 echoln "[loader.cfg]  ";
