--- a/cfg/primary/binds.cfg
+++ b/cfg/primary/binds.cfg
@@ -23,10 +23,10 @@ bind "NUMLOCK"        "                                                         
 
 echoln "[binds.cfg] {2} Configuring binds for keyboard row 2";
 bind "`"              "toggleconsole"                                                                                               // This is the grave key
-bind "1"              "+fin_knife; fin_nadexhoff;                                           ; fin_keycontainer";                    // This is the 1 key
-bind "2"              "fin_uninspect; fin_nadexhoff; slot3; slot2; slot1;                   ; fin_keycontainer";                    // This is the 2 key
-bind "3"              "fin_uninspect; fin_nadexhoff; slot3; slot1; slot2;                   ; fin_keycontainer";                    // This is the 3 key
-bind "4"              "fin_uninspect; slot3; fin_nadexhoff;                                 ; fin_keycontainer";                    // This is the 4 key
+bind "1"              "+fin_knife; fin_nadexhoff; fin_vmp_highfov;                          ; fin_keycontainer";                    // This is the 1 key
+bind "2"              "fin_clear_lookatweapon; fin_nadexhoff; slot3; slot2; slot1; fin_vmp_highfov;            ; fin_keycontainer"; // This is the 2 key
+bind "3"              "fin_clear_lookatweapon; fin_nadexhoff; slot3; slot1; slot2; fin_vmp_highfov;            ; fin_keycontainer"; // This is the 3 key
+bind "4"              "fin_clear_lookatweapon; slot3; fin_nadexhoff; fin_vmp_knife;                            ; fin_keycontainer"; // This is the 4 key
 bind "5"              "fin_nadexhon;  slot6;                                                ; fin_keycontainer";                    // This is the 5 key
 bind "6"              "fin_nadexhon;  slot5;                                                ; fin_keycontainer";                    // This is the 6 key
 bind "7"              "fin_nadexhon;  slot6;                                                ; fin_keycontainer";                    // This is the 7 key
@@ -75,7 +75,7 @@ bind "A"              "                                                         
 bind "S"              "+fin_left;                                                           ; fin_keycontainer";                    // This is the s key
 bind "D"              "+fin_back;                                                           ; fin_keycontainer";                    // This is the d key
 bind "F"              "+fin_right;                                                          ; fin_keycontainer";                    // This is the f key
-bind "G"              "+fin_desubtick_lookatweapon; fin_uninspect;                          ; fin_keycontainer";                    // This is the g key
+bind "G"              "+fin_desubtick_lookatweapon; fin_clear_lookatweapon;                 ; fin_keycontainer";                    // This is the g key
 bind "H"              "drop;                                                                ; fin_keycontainer";                    // This is the h key
 bind "J"              "+fin_spin;                                                           ; fin_keycontainer";                    // This is the j key
 bind "K"              "                                                                     ; fin_keycontainer";                    // This is the k key
@@ -116,7 +116,7 @@ bind "ALT"            "                                                         
 bind "SPACE"          "+fin_cjump;                                                          ; fin_keycontainer";                    // This is the spacebar key
 bind "RALT"           "                                                                     ; fin_keycontainer";                    // This is the right alt key
 bind "RWIN"           "                                                                     ; fin_keycontainer";                    // This is the windows (os) key to the right of the spacebar
-// ** No key for Menu key **                                                                ** No key for Menu key **               // The menu key isn't bindable
+bind "APP"            "                                                                     ; fin_keycontainer";                    // This is the menu (right click) key.
 bind "RCTRL"          "                                                                     ; fin_keycontainer";                    // This is the right control key
 bind "LEFTARROW"      "                                                                     ; fin_keycontainer";                    // This is the left arrow key
 bind "DOWNARROW"      "                                                                     ; fin_keycontainer";                    // This is the down arrow key
@@ -128,7 +128,7 @@ bind "KP_DEL"         "fin_ahegao;                                              
 
 echoln "[binds.cfg] {7} Configuring binds for the mouse";
 bind "MOUSE1"         "+fin_desubtick_attack;                                               ; fin_keycontainer";                    // This is the left click button
-bind "MOUSE2"         "+fin_desubtick_attack2; fin_uninspect;                               ; fin_keycontainer";                    // This is the right click button
+bind "MOUSE2"         "+fin_desubtick_attack2; fin_clear_lookatweapon;                      ; fin_keycontainer";                    // This is the right click button
 bind "MOUSE3"         "player_ping;                                                         ; fin_keycontainer";                    // This is the mouse wheel click button
 bind "MOUSE4"         "+fin_desubtick_voicerecord;                                          ; fin_keycontainer";                    // No keycontainer = works in the menu  // This is one of the side mouse buttons
 bind "MOUSE5"         "+fin_lj_forward;                                                     ; fin_keycontainer";                    // This is one of the side mouse buttons
@@ -141,7 +141,7 @@ bind "MOUSE_Y"        "fin_onmousemove; pitch";                                 
 echoln "[binds.cfg] {8} Configuring binds for controllers";
 bind "A_BUTTON"       "+fin_cjump;                                                          ; fin_keycontainer";                    // This is the A button on Xbox Controllers
 bind "B_BUTTON"       "+fin_betteruse;                                                      ; fin_keycontainer";                    // This is the B button on Xbox Controllers
-bind "X_BUTTON"       "+fin_desubtick_reload; fin_uninspect;                                ; fin_keycontainer";                    // This is the X button on Xbox Controllers
+bind "X_BUTTON"       "+fin_desubtick_reload; fin_clear_lookatweapon;                       ; fin_keycontainer";                    // This is the X button on Xbox Controllers
 bind "Y_BUTTON"       "invnextnongrenade;                                                   ; fin_keycontainer";                    // This is the Y button on Xbox Controllers
 bind "L_SHOULDER"     "+fin_desubtick_lookspin;                                             ; fin_keycontainer";                    // This is left shoulder (bumper) on Xbox Controllers
 bind "R_SHOULDER"     "+fin_desubtick_duck;                                                 ; fin_keycontainer";                    // This is right shoulder (bumper) on Xbox Controllers
