--- a/cfg/primary/networking.cfg
+++ b/cfg/primary/networking.cfg
@@ -3,15 +3,16 @@ echoln "[networking.cfg] Start of networking.cfg";
 
 
 echoln "[networking.cfg] {1} Configuring client-side networking";
-net_client_steamdatagram_enable_override "1";                   // 0: Use connect method requested by GC.  >0: Always use SDR if possible.  <0: Always use direct UDP if possible
+sv_unify_random_seed "true";                                    // Should we securely share seeds between the client and server?
 sv_usercmd_custom_random_seed "false";                          // When enabled server will populate an additional random seed independent of the client
+net_client_steamdatagram_enable_override "1";                   // 0: Use connect method requested by GC.  >0: Always use SDR if possible.  <0: Always use direct UDP if possible
 cq_netgraph_problem_show_auto "true";                           // Automatically activate/deactivate cq_netgraph when network conditions degrade
 mm_dedicated_search_maxping "25";                               // Longest preferred ping to dedicated servers for games
 cl_phys_sleep_enable "false";                                   // Enable sleeping for dynamic physics bodies.
 cl_lagcompensation "true";                                      // Perform server side lag compensation of weapon firing events.
 cl_predictweapons "true";                                       // Perform client side prediction of weapon effects.
-cl_timeout "60";                                                // After this many seconds without receiving a packet from the server, the client will disconnect itself
 cl_predict "true";                                              // Perform client side prediction.
+cl_timeout "60";                                                // After this many seconds without receiving a packet from the server, the client will disconnect itself
 cl_resend "0.5";                                                // Delay in seconds before the client will resend the 'connect' attempt
 rate "1000000";                                                 // Min bytes/sec the host can receive data
 // CS2 cl_interp_ratio "1";                                     // Sets the interpolation amount (final amount is cl_interp_ratio / cl_updaterate).
