--- a/cfg/primary/safety.cfg
+++ b/cfg/primary/safety.cfg
@@ -17,6 +17,7 @@ cl_join_advertise "0";                                          // Advertise joi
 sv_tags "hidden";                                               // Server tags. Used to provide extra information to clients when they're browsing for servers. Separate tags with a comma. (hidden hides from community server list)
 sv_pure "2";                                                    // Forces all client files to match the server's (except for a certain exempt files)
 sv_prime_accounts_only "true";                                  // When this setting is enabled only prime users can connect to this game server.
+sv_invites_only_mainmenu "true";                                // If turned on, will ignore all invites when user is playing a match
 sv_kick_players_with_cooldown "2";                              // (0: do not kick on insecure servers; 1: kick players with Untrusted status or convicted by Overwatch; 2: kick players with any cooldown)
 sv_server_verify_blood_on_player "true";
 rcon_connected_clients_allow "false";                           // Allow clients to use rcon commands on server.
