--- a/practice.cfg
+++ b/practice.cfg
@@ -4,9 +4,9 @@ echoln "[practice.cfg] Start of practice.cfg";
 
 echoln "[practice.cfg] ";
 echoln "[practice.cfg] Loading...";
-echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.4";
+echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.5";
 echoln "[practice.cfg] steamcommunity.com/id/bigfinfrank";
-echoln "[practice.cfg] Last edited: October 18th 2023";
+echoln "[practice.cfg] Last edited: October 22nd 2023";
 echoln "[practice.cfg] ";
 
 
@@ -29,12 +29,9 @@ motdfile "motd.txt";                                    // The MOTD file to load
 
 
 echoln "[practice.cfg] {2] Setting passwords";
-rcon_password "Zg8j*78yRA&l#o08eTwNTkhKxw7wQSdB^E7%C";  // remote console password.
-tv_relaypassword "%Z19f2Gp5f7LZDoplAz0vFpTQtkUQMod";    // GOTV password for relay proxies
-sv_password "vVmPD%Z8lGVK$03sIVlz3xHuzs5$phCiAft";      // Server password for entry into multiplayer games
-tv_password "%Z19f2Gp5f7LZDoplAz0vFpTQtkUQMod";         // GOTV password for all clients
-rcon_connected_clients_allow "false";                   // Allow clients to use rcon commands on server.
+exec "./cfg/primary/server_secrets.cfg";
 tv_advertise_watchable "false";                         // GOTV advertises the match as watchable via game UI, clients watching via UI will not need to type password
+rcon_connected_clients_allow "false";                   // Allow clients to use rcon commands on server.
 
 
 
@@ -74,7 +71,7 @@ bot_allow_snipers "false";                              // If nonzero, bots may 
 bot_allow_rifles "false";                               // If nonzero, bots may use rifles.
 bot_allow_rogues "false";                               // If nonzero, bots may occasionally go 'rogue'. Rogue bots do not obey radio commands,
 bot_chatter "off";                                      // Control how bots talk. Allowed values: 'off', 'radio', 'minimal', or 'normal'.
-bot_quota "1";                                          // Determines the total number of bots in the game.
+bot_quota "0";                                          // Determines the total number of bots in the game.
 bot_kick "all";                                         // Kicks a specific bot, or all bots, matching the given criteria. <all> <t|ct> <type>
 bot_stop "all";                                         // Turns off all bot AI <1|all> | <not_bomber> | <t> | <ct>
 bot_zombie "true";                                      // If nonzero, bots will stay in idle mode and not attack.
@@ -113,9 +110,11 @@ engine_low_latency_sleep_after_client_tick "true";      // When r_low_latency is
 echoln "[practice.cfg] {9} Changing security settings";
 sv_server_verify_blood_on_player "true";
 sv_kick_players_with_cooldown "2";                      // (0: do not kick on insecure servers; 1: kick players with Untrusted status or convicted by Overwatch; 2: kick players with any cooldown)
+sv_invites_only_mainmenu "true";                        // If turned on, will ignore all invites when user is playing a match
 sv_steamgroup_exclusive "true";                         // If set, only members of Steam group will be able to join the server when it's empty, public people will be able to join the server only if it has players.
 sv_prime_accounts_only "true";                          // When this setting is enabled only prime users can connect to this game server.
 sv_max_allowed_net_graph "0";                           // Determines max allowed net_graph value for clients.
+sv_unify_random_seed "true";                            // Should we securely share seeds between the client and server?
 sv_pure_kick_clients "true";                            // If set to 1, the server will kick clients with mismatching files. Otherwise, it will issue a warning to the client.
 sv_kick_ban_duration "0";                               // How long should a kick ban from the server should last (in minutes)
 sv_steamgroup "44453148";                               // The ID of the steam group that this server belongs to. You can find your group's ID on the admin profile page in the steam community.
@@ -373,7 +372,7 @@ tv_status;                                              // Show SourceTV server 
 echoln "[practice.cfg]  ";
 demo_info;                                              // Print information about currently playing demo.
 echoln "[practice.cfg]  ";
-soundinfo;                                              // Describe the current sound device with an active voice list.
+//soundinfo;                                            // Describe the current sound device with an active voice list. **Causing crashes when run with -dedicated launch option**
 echoln "[practice.cfg]  ";
 install_dlc_workshoptools_cvar;                         // DLC Install Status
 echoln "[practice.cfg]  ";
@@ -383,15 +382,16 @@ condump;                                                // dump the text current
 
 
 echoln "[practice.cfg] {25} Restarting to apply changes in one second...";
+script_reload_code "kz";                                // Execute a vscript file, replacing existing functions with the functions in the run script ("kz" is from https://github.com/bigfinfrank/cs2-kz-lua)
 mp_restartgame "1";                                     // If non-zero, game will restart in the specified number of seconds
 respawn_player;                                         // Respawns the player from death!
 
 
 echoln "[practice.cfg] ";
 echoln "[practice.cfg] Loaded!";
-echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.4";
+echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.5";
 echoln "[practice.cfg] steamcommunity.com/id/bigfinfrank";
-echoln "[practice.cfg] Last edited: October 18th 2023";
+echoln "[practice.cfg] Last edited: October 22nd 2023";
 echoln "[practice.cfg] ";
 
 
